use URL params to set color
